[project]
name = "youbuyfirst-pipeline"
version = "0.1.0"
description = "Python crawler and LLM sentiment pipeline for YouBuyFirst MVP"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "finance-datareader>=0.9.90",
    "openai>=1.50",
    "playwright==1.48.0",
    "pydantic>=2.8",
    "pykrx>=1.2.8",
    "python-dotenv>=1.0",
    "yfinance>=0.2.66",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "respx>=0.21",
]

[project.scripts]
youbuyfirst-pipeline = "youbuyfirst_pipeline.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
